--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/jonathanemorales/React-Portfolio",
+  "homepage": "http://jonathanemorales.github.io/React-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "production-build -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
